--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -10,3 +10,10 @@ body
   align-self: center
   margin: 0 auto
   display: block
+
+#year-picker
+  position: absolute
+  top: 5px
+  left: 5px
+  width: 150px
+  font-size: 2em
