--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -1,3 +1,8 @@
+@font-face
+  font-family: "Open Sans", sans-serif
+  font-weight: 400
+  src: url(https://fonts.googleapis.com/css?family=Open+Sans:400,800)
+
 body
   margin: 0
   padding: 0
@@ -5,6 +10,7 @@ body
   flex-flow: column wrap
   justify-content: center
   overflow: auto
+  font-family: "Open Sans", sans-serif
 
 #canvas
   align-self: center
