--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -10,6 +10,7 @@ body
   display: flex
   flex-flow: column wrap
   justify-content: center
+  align-items: center
   overflow: auto
   font-family: "Open Sans", sans-serif
 
@@ -55,23 +56,14 @@ body
   margin: 10px
   font-size: 1.25em
 
-.about-link
-  position: absolute
-  bottom: 0
-  right: 0
-  margin: 10px
-  font-size: 12px
-
 .about
   position: absolute
-  top: 50%
-  left: 50%
-  margin-left: -25%
-  margin-top: -12.5vh
-  width: 50vw
-  height: 25vh
+  flex: 1
+  width: 33vw
+  height: 33vh
   padding: 20px
-  font-size: 18px
+  font-size: 16px
+  line-height: 24px
   border: 2px solid #777
   background-color: rgba(255,255,255,0.95)
 
@@ -79,17 +71,23 @@ body
     display: none
 
 .links
-  position: absolute
+  position: fixed
   bottom: 0
   left: 0
-  width: 200px
+  right: 0
   font-size: 12px
   line-height: 24px
-  margin: 10px
+  padding: 5px 10px
   display: flex
   flex-flow: row nowrap
-  justify-content: space-between
-  align-self: flex-end
+
+  a
+    flex: 0 1 auto
+    margin: 0 0 0 10px
+    align-self: flex-start
+
+    &.about-link
+      margin: 0 0 0 auto
 
   img
     max-height: 16px
@@ -181,6 +179,16 @@ body
     display: none
 
 @media (max-width: 800px)
+  .about
+    position: absolute
+    top: 10vh
+    flex: 1
+    width: 90vw
+    height: 75vh
+    padding: 10px
+    font-size: 12px
+    line-height: 20px
+
   .game-info
     padding: 5px 10px
 
