--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -33,8 +33,9 @@ body
   &.error
     .msg
       display: block
+      position: absolute
     canvas
-      display: none
+      opacity: 0.25
 
   &.loading:after
     content: "Loading..."
